--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     background: #191919;
-    height: 50px;
+    height: 70px;
     border-bottom: 10px solid #e7513b;
 }
 
@@ -12,11 +12,13 @@
     display: flex;
     align-items: center;
     height: 100%;
-    padding: 0 1rem;
+    padding: 0px 1rem;
 }
 
 .navbar__logo {
     margin-left: 1rem;
+    max-height: 40px;
+    max-width: 40px;
 }
 
 .navbar__logo a {
