--- a/src/Containers/Sign/Sign.module.css
+++ b/src/Containers/Sign/Sign.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  height: 100vh;
   display: flex;
   flex-flow: row wrap;
   align-content: center;
@@ -8,16 +7,27 @@
 
 .imgcontainer {
   width: 40%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
 }
 
 .formcontainer {
   margin: 0 5%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.p {
+	font-family: 'Roboto', sans-serif;
+  color: rgba(255, 255, 255, 1);
+	font-size: 20px;
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
