--- a/src/Containers/Form.module.css
+++ b/src/Containers/Form.module.css
@@ -44,3 +44,13 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
+@media(max-width: 480px){
+
+  .box{
+    width: 360px;
+  }
+
+  .input{
+    width: 300px;
+  }
+}
