--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,18 @@
 .wrapper {
+  width: 100%;
   background: #191919;
   display: flex;
   flex-direction: column;
 }
 
 .main {
-  margin: max(80px, 10%) 0 10% 0;
+  width: 100%;
+  min-height: calc(100vh -  70px) ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin: max(80px, 10%) 0 10% 0; */
+  margin-top: 70px;
 }
 
 
