--- a/src/Components/page_format_1.module.css
+++ b/src/Components/page_format_1.module.css
@@ -12,10 +12,13 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items: center;
+	min-height:100%;
+	max-height:100%;
 }
 
 @media(max-width:720px){
 	.page_fraction{
 		flex-direction: column-reverse;
+		margin-top:5%;
 	}
 }
