Integrate with backend(local only), Integrate Toaster

--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -55,3 +55,10 @@
 .navbar_navigation_items a:active {
   color: orange;
 }
+
+.logout_button{
+  background: transparent;
+  color: #fff;
+  font-size: 1em;
+  cursor: pointer;
+}
