--- a/src/Containers/Join/Join.module.css
+++ b/src/Containers/Join/Join.module.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   font-family: 'Roboto', sans-serif;
   padding: 0;
@@ -11,19 +11,19 @@ body {
 
 * {
   box-sizing: border-box;
-}
+} */
 
 .joinOuterContainer {
   display: flex;
   justify-content: center;
   text-align: center;
-  height: 100vh;
   align-items: center;
-  background-color: #1a1a1d;
+  width: 100%;
+  /* background-color: #1a1a1d; */
 }
 
 .joinInnerContainer {
-  width: 20%;
+  width: 300px;
 }
 
 .joinInput {
@@ -32,6 +32,7 @@ body {
   color: rgba(239, 62, 58, 1);
   padding: 15px 20px;
   width: 100%;
+  border: none;
 }
 
 .heading {
