--- a/src/Containers/Chat/Chat.module.css
+++ b/src/Containers/Chat/Chat.module.css
@@ -1,8 +1,10 @@
 .outerContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
+  min-width: 100%;
   background-color: #1A1A1D;
 }
 
@@ -10,25 +12,69 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #FFFFFF;
+  background: #191919;
   border-radius: 8px;
-  min-height: 60%;
-  min-width: 35%;
+  border: 1px solid #e7513b;
+  margin-right:1%;
+  min-height: 80vh;
+  max-height: 80vh;
+  min-width: 30%;
+  max-width: 30%;
+}
+
+.videoContainer {
+  margin-left:1%;
+  min-width: 65%;
+  max-width: 65%;
+  min-height: 80vh;
+  max-height: 80vh;
+  border: 1px solid red;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
   .outerContainer {
-    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 90%;
+    max-height: 90%;
+  }
+
+  .videoContainer {
+    min-height: 60vh;
+    max-height: 60vh;
+    min-width: 90%;
+    max-width: 90%;
+    margin-top: 1%;
+    margin-left:0%;
   }
 
   .container {
-    width: 100%;
-    height: 100%;
+    min-height: 25vh;
+    max-height: 25vh;
+    min-width: 90%;
+    max-width: 90%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right:0%;
+    justify-content: flex-start;
   }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
+  .outerContainer {
+    min-height: 90%;
+    max-height: 90%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+  }
+  
+  .videoContainer {
+    min-height: 75vh;
+    max-height: 75vh;
+  }
+  
   .container {
-    width: 60%;
+    min-height: 75vh;
+    max-height: 75vh;
   }
 }
