--- a/src/Containers/Messages/Message/Message.module.css
+++ b/src/Containers/Messages/Message/Message.module.css
@@ -2,7 +2,6 @@
   background: #F3F3F3;
   border-radius: 20px;
   padding: 5px 20px;
-  color: white;
   display: inline-block;
   max-width: 80%;
 }
@@ -30,7 +29,7 @@
   display: flex;
   align-items: center;
   font-family: Helvetica;
-  color: #828282;
+  color: white;
   letter-spacing: 0.3px;
 }
 
@@ -51,7 +50,7 @@
 }
 
 .colorWhite {
-  color: white;
+  color: #FFFFFF;
 }
 
 .colorDark {
@@ -59,9 +58,31 @@
 }
 
 .backgroundBlue {
-  background: #2979FF;
+  background: #e7513b;
 }
 
 .backgroundLight {
-  background: #F3F3F3;
+  background: #474747;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .messageBox {
+    padding: 0px 10px;
+  }
+  
+  .messageContainer {
+    padding: 0 3%;
+    margin-top: 3px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 1200px) {
+  .messageBox {
+    padding: 0px 10px;
+  }
+  
+  .messageContainer {
+    padding: 0 3%;
+    margin-top: 3px;
+  }
 }
