--- a/src/Containers/Chat/Chat.module.css
+++ b/src/Containers/Chat/Chat.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   min-height: 100%;
   min-width: 100%;
-  background-color: #1A1A1D;
+  background-color: #1a1a1d;
 }
 
 .container {
@@ -15,7 +15,7 @@
   background: #191919;
   border-radius: 8px;
   border: 1px solid #e7513b;
-  margin-right:1%;
+  margin-right: 1%;
   min-height: 80vh;
   max-height: 80vh;
   min-width: 30%;
@@ -23,13 +23,14 @@
 }
 
 .videoContainer {
-  margin-left:1%;
+  margin-left: 1%;
   min-width: 65%;
   max-width: 65%;
   height: 80vh;
-  /* min-height: 80vh;
-  max-height: 80vh; */
+  min-height: 80vh;
+  max-height: 80vh;
   border: 1px solid red;
+  /* border-radius: 8px; */
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -46,7 +47,7 @@
     min-width: 90%;
     max-width: 90%;
     margin-top: 1%;
-    margin-left:0%;
+    margin-left: 0%;
   }
 
   .container {
@@ -56,7 +57,7 @@
     max-width: 90%;
     margin-top: 1%;
     margin-bottom: 1%;
-    margin-right:0%;
+    margin-right: 0%;
     justify-content: flex-start;
   }
 }
@@ -68,12 +69,12 @@
     padding-bottom: 2%;
     padding-top: 2%;
   }
-  
+
   .videoContainer {
     min-height: 75vh;
     max-height: 75vh;
   }
-  
+
   .container {
     min-height: 75vh;
     max-height: 75vh;
