Fix Scroll Bug and adds pointer to Few Buttons

--- a/src/Containers/Chat/Chat.module.css
+++ b/src/Containers/Chat/Chat.module.css
@@ -16,6 +16,7 @@
   border-radius: 8px;
   border: 1px solid #e7513b;
   margin-right: 1%;
+  height: 80vh;
   min-height: 80vh;
   max-height: 80vh;
   min-width: 30%;
