--- a/src/Containers/Input/Input.module.css
+++ b/src/Containers/Input/Input.module.css
@@ -27,6 +27,7 @@ input:focus, textarea:focus, select:focus{
   display: inline-block;
   border: none;
   width: 20%;
+  cursor: pointer;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
