--- a/src/Containers/Player/Player.module.css
+++ b/src/Containers/Player/Player.module.css
@@ -40,6 +40,7 @@ select:focus {
   display: inline-block;
   border: none;
   width: 20%;
+  cursor: pointer;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
