--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,12 +7,10 @@
 
 .main {
   width: 100%;
-  min-height: calc(100vh -  70px) ;
+  /* 70px for navbar */
+  min-height: calc(100vh - 70px);
+  margin-top: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin: max(80px, 10%) 0 10% 0; */
-  margin-top: 70px;
 }
-
-
