--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -17,8 +17,9 @@
 
 .navbar__logo {
   margin-left: 0.5px;
-  max-height: 40px;
-  max-width: 40px;
+  width: 2.5em;
+  height: auto;
+  /* height: 40px; */
 }
 
 .navbar__logo a {
@@ -56,7 +57,7 @@
   color: orange;
 }
 
-.logout_button{
+.logout_button {
   background: transparent;
   color: #fff;
   font-size: 1em;
