--- a/src/Components/elements_1.module.css
+++ b/src/Components/elements_1.module.css
@@ -1,35 +1,37 @@
-.textarea_1{
-	font-family: 'Roboto', sans-serif;
-	color: #FFFFFF;
-	font-size: 20px;
+.textarea_1 {
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
 }
 
-.heading_1{
-	font-family: 'Roboto', sans-serif;
-	color: #e7513b;
-	font-size: 40px;
+.heading_1 {
+  font-family: 'Roboto', sans-serif;
+  color: #e7513b;
+  font-size: 40px;
 }
 
-.img_card_1{
-	opacity:0;
-	max-width:90%;
-	object-fit:scale-down;
-	grid-column-start:1;
-	grid-row-start:1;
+.img_card_1 {
+  width: 90%;
+  height: auto;
+  opacity: 0;
+  max-width: 90%;
+  object-fit: scale-down;
+  grid-column-start: 1;
+  grid-row-start: 1;
 }
 
-@media(max-width:720px){
-	.img_card_1{
-		max-width:100%;
-		justify-self:center;
-	}
-	
-	.heading_1{
-		font-size:30px;
-		margin-bottom:0;
-	}
-	
-	.textarea_1{
-		font-size:15px;
-	}
+@media (max-width: 720px) {
+  .img_card_1 {
+    max-width: 100%;
+    justify-self: center;
+  }
+
+  .heading_1 {
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+
+  .textarea_1 {
+    font-size: 15px;
+  }
 }
